HV-1125 Latest JDK9 previews changed -addmods to --add-modules